--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-persist": "^5.6.9",
     "redux-thunk": "^2.2.0"
   }
 }
